--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     types: [opened, reopened, edited, synchronize]
-    branches: [main]
+    branches: [main-test]
 
 jobs:
   build:
@@ -21,4 +21,4 @@ jobs:
           pip install mypy
       - name: Analysing the code with mypy
         run: |
-          mypy --ignore-missing-imports --exclude venv --cache-dir=.mypy_cache/ .
+          mypy --ignore-missing-imports --install-types --non-interactive --exclude venv --cache-dir=.mypy_cache/ .
