--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [good-names]
-disable = invalid-name, too-few-public-methods, duplicate-code, import-error, attribute-defined-outside-init
+disable = invalid-name, too-few-public-methods, duplicate-code, import-error, attribute-defined-outside-init, redefined-outer-name
