Homework 24 was added

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,4 @@
 [good-names]
-disable = invalid-name, too-few-public-methods, duplicate-code, import-error, attribute-defined-outside-init, redefined-outer-name
+disable = invalid-name, too-few-public-methods, duplicate-code, import-error,
+ attribute-defined-outside-init, redefined-outer-name, useless-parent-delegation,
+  too-many-arguments
