pytest.ini file and .pylintrc file were deleted and exceptions were added to pylint.yaml file

--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -21,4 +21,4 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          pylint $(git ls-files '*.py')
+          pylint $(git ls-files '*.py') --disable=invalid-name, too-few-public-methods, duplicate-code, import-error, attribute-defined-outside-init, redefined-outer-name
