--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -21,4 +21,4 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          pylint $(git ls-files '*.py')
+          pylint --disable=C0103,R0903,R0801,E0401,W0201,W0621 **/*.py
